syntax = "proto3";

package apriori;

option go_package = "./adapter/pkg/apriori/pb";

import "google/protobuf/Empty.proto";
import "google/protobuf/Timestamp.proto";

service AprioriService {
  rpc FindAll(google.protobuf.Empty) returns (ListAprioriResponse);
  rpc FindAllByActive(google.protobuf.Empty) returns (ListAprioriResponse);
  rpc FindAllByCode(GetAprioriByCodeRequest) returns (ListAprioriResponse);
  rpc FindByCodeAndId(GetAprioriByCodeAndIdRequest) returns (GetAprioriByCodeAndIdResponse);
  rpc Create(CreateAprioriRequest) returns (google.protobuf.Empty);
  rpc Update(UpdateAprioriRequest) returns (GetAprioriResponse);
  rpc UpdateStatus(GetAprioriByCodeRequest) returns (google.protobuf.Empty);
  rpc Delete(GetAprioriByCodeRequest) returns (google.protobuf.Empty);
  rpc Generate(GenerateAprioriRequest) returns (GetGenerateAprioriResponse);
}

message Apriori {
  int64 IdApriori = 1;
  string Code = 2;
  string Item = 3;
  float Discount = 4;
  float Support = 5;
  float Confidence = 6;
  string RangeDate = 7;
  bool IsActive = 8;
  optional string Description = 9;
  int32 Mass = 10;
  optional string Image = 11;
  google.protobuf.Timestamp CreatedAt = 12;
}

message GetGenerateAprioriResponse {
  repeated AprioriGenerate AprioriGenerate = 1;
}

message AprioriGenerate {
  repeated string ItemSet = 1;
  float Support = 2;
  int32 Iterate = 3;
  int32 Transaction = 4;
  float Confidence = 5;
  float Discount = 6;
  string Description = 7;
  string RangeDate = 8;
}

message ListAprioriResponse {
  repeated Apriori apriori = 1;
}

message GetAprioriResponse {
  Apriori apriori = 1;
}

message GetAprioriByCodeRequest {
  string Code = 1;
}

message GetAprioriByCodeAndIdRequest {
  string Code = 1;
  int64 Id = 2;
}

message GetAprioriByCodeAndIdResponse {
  Apriori apriori = 1;
}

message CreateAprioriRequest {
  message Create {
    string Item = 1;
    float Discount = 2;
    float Support = 3;
    float Confidence = 4;
    string RangeDate = 5;
    string CreatedAt = 6;
  }

  repeated Create CreateAprioriRequest = 1;
}

message UpdateAprioriRequest {
  int64  IdApriori = 1;
  string Code = 2;
  string Description = 3;
  string Image = 4;
}

message GenerateAprioriRequest {
  float MinimumSupport = 1;
  float MinimumConfidence = 2;
  int32 MinimumDiscount = 3;
  int32 MaximumDiscount = 4;
  string StartDate = 5;
  string EndDate = 6;
}
